<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkcolor"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" >
        
        <Button
            android:id="@+id/wifiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/white"
            android:contentDescription="@string/wifi_description"
            android:drawableTop="@drawable/ic_wifi"
            android:text="@string/text_wifi" 
            android:textSize="14sp"
            />
        
        <Button 
            android:id="@+id/bluetoothButton"
            android:drawableTop="@drawable/ic_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_toRightOf="@id/wifiButton"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="55dp"
            android:text="@string/text_bluetooth"
            android:textSize="14sp"
            android:contentDescription="@string/bluetooth_description"
            />
        
        <Button 
            android:id="@+id/hotspotButton"
            android:drawableTop="@drawable/ic_hotspot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bluetoothButton"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="55dp"
            android:background="@color/white"
            android:text="@string/text_hotspot"
            android:textSize="14sp"
            android:contentDescription="@string/hotspot_description"
            />
        
        <Button 
            android:id="@+id/setupButton"
            android:drawableTop="@drawable/ic_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/hotspotButton"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="55dp"
            android:background="@color/white"
            android:text="@string/text_setup"
            android:textSize="14sp"
            android:contentDescription="@string/setup_description"
            />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/helpHyperLinkLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/userGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="14sp" />
        
    </RelativeLayout>
    </LinearLayout>  
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />  
</LinearLayout>
