<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WifiIPDirectActivity"
    >
    
    <ProgressBar 
        android:id="@+id/widget110"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:visibility="invisible"
		style="?android:attr/progressBarStyleSmallTitle">
		</ProgressBar>
	        
    <RelativeLayout 
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30.0dp"
        android:layout_marginRight="30.0dp"
        android:layout_marginTop="20.0dp"
        android:layout_marginBottom="15.0dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="25.0dip"
            android:textSize="20.0dp"
            />
        <TextView 
            android:id="@+id/ipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleText"
            android:layout_alignParentLeft="true"
			android:layout_marginTop="5.0dip" 
			android:layout_marginRight="5.0dip"
            android:text="@string/text_ipconnection_ip"
            android:textSize="16.0dp"
            android:textStyle="bold"
            />
        
        <EditText 
            android:id="@+id/ipAddressEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleText"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:hint="@string/text_ipconnection_hint"
            android:background="@color/white"
            android:layout_marginLeft="30.0dip"
			android:layout_marginTop="5.0dip" 
			android:layout_marginRight="5.0dip"
            android:textSize="16.0dp"
            />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.0dip"
            android:layout_below="@+id/ipTextView"
            android:text="@string/text_ipconnection_tip"
            android:textSize="12.0dp"
            />
        
        <Button 
            android:id="@+id/connectIpButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15.0dp"
            android:layout_marginLeft="10.0dp"
            android:textSize="16.0sp"
            android:text="@string/text_ipconnection_connect"
            android:background="#3366CC"
			/>
		<ImageButton 
		    android:id="@+id/wifiSetupButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentBottom="true"  
		    android:layout_marginBottom="12.0dp"
		    android:layout_marginRight="8.0dp"
		    android:background="@drawable/ic_wifipanel"
		    />
    </RelativeLayout>
</RelativeLayout>
